Bug 976877 - Don't simplify invalidation regions since it leads to poor results. r=roc